feat: add Formation information

--- a/index.html
+++ b/index.html
@@ -50,8 +50,10 @@
         <div class="Formacao">
             <h1>Formação</h1>
             <hr>
+            <p><b>Jorge Bierrenbach de Castro, Valinhos -</b> Ensino fundamental completo</p>
             <p><b>Sesi, Valinhos -</b> Ensino médio incompleto</p>
-            
+            <p><b>Senai, Valinhos -</b> Desenvolvimento de sistemas</p>
+
 
         </div>
     </div>
