feat: Add new information

--- a/index.html
+++ b/index.html
@@ -3,18 +3,18 @@
 
 <head>
     <title>Ana | curriculo </title>
-
+    <script src="https://kit.fontawesome.com/696e34ab32.js" crossorigin="anonymous"></script>
     <style>
 
         .container {
             width: 100%;
-            height: 100vh;
+            height: 100%;
             background-color: rgb(247, 250, 246);
         }
 
         .header {
             width: 100%;
-            height: 38vh;
+            height: 35vh;
             text-align: center;
             line-height: 10px;
             background-color: rgb(210, 216, 255);
@@ -29,8 +29,23 @@
         .formacao{
             margin-top: 210px;
         }
+        .projetos{
+            margin-top: 310px;
+        }
+        .habilidades{
+            margin-top: 310px;
+        }
         hr{
             border-color: ;
+        }
+        
+        .footer{
+            width: 100%;
+            height: 35vh;
+            display:inline-block ;
+            text-align: center;
+            line-height: 10px;
+            background-color: #d2d8fc;
         }
 
     </style>
@@ -50,16 +65,42 @@
         <div class="Formacao">
             <h1>Formação</h1>
             <hr>
-            <p><b>Jorge Bierrenbach de Castro, Valinhos -</b> Ensino fundamental completo</p>
-            <p><b>Sesi, Valinhos -</b> Ensino médio incompleto</p>
-            <p><b>Senai, Valinhos -</b> Desenvolvimento de sistemas</p>
-
-
+            <p><b>Cecília Meireles, Valinhos -</b> Ensino fundamental | 2014 - 2019 </p>
+            <p><b>Jorge Bierrenbach de Castro, Valinhos -</b> Ensino fundamental | 2019 - 2022</p>
+            <p><b>Sesi, Valinhos -</b> Ensino médio | 2023 - 2025</p>
+            <p><b>Senai, Valinhos -</b> Desenvolvimento de sistemas | 2024 - 2025</p>
+            <p><b>Curso Senai -</b> Cloud IA foundation | 2023</p>
         </div>
-    </div>
-    </div>
+
+        <div class="Projetos">
+            <h1>Projetos</h1>
+            <hr>
+            <p><b>F1 in schools</b></p>
+            <ul>
+                <li><p><b>Scuderia PowerShot -</b> Gerente de projetos & líder da equipe | 2023 - 2024</p></li>
+                <li><p><b>Scuderia Nitroneedles -</b> Gerente de marketing & gerente financeiro | 2024 - 2025</p></li>
+            </ul>
+        </div>
+        <div class="Habilidades">
+            <h1>Habilidades</h1>
+            <hr>
+            <ul>
+            <li><p><b>Inglês avançado</b></p></li>
+            <li><p><b>Design digital</b></p></li>
+            <li><p><b>Liderança</b></p></li>
+            <li><p><b>Gerenciamento de projetos</b></p></li>
+            <li><p><b>HTML, CSS, JavaScript</b></p></li>
+        </ul>
+        </div>
+    
+ <footer class="footer">
+      <div class="social">
+        <p><a href="https://www.linkedin.com/in/ana-carolina-garcia-freitas-4907b52b1?utm_source=share&utm_campaign=share_via&utm_content=profile&utm_medium=android_app" target="_blank"></a><i class="fa-brands fa-linkedin fa-2xl" style="color: #a9b2e5;"></i> Linkedin</p>
 
 
+      </div>
+    </div>
+      </div>
 </body>
 
 </html>
